Enhance homepage layout and functionality with new hero section, flight search form

--- a/src/output.css
+++ b/src/output.css
@@ -63,6 +63,7 @@
     --container-sm: 24rem;
     --container-2xl: 42rem;
     --container-4xl: 56rem;
+    --container-5xl: 64rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
     --text-xs: 0.75rem;
@@ -401,6 +402,9 @@
   .mr-1\.5 {
     margin-right: calc(var(--spacing) * 1.5);
   }
+  .mr-2 {
+    margin-right: calc(var(--spacing) * 2);
+  }
   .mr-3 {
     margin-right: calc(var(--spacing) * 3);
   }
@@ -548,6 +552,9 @@
   .h-full {
     height: 100%;
   }
+  .h-screen {
+    height: 100vh;
+  }
   .min-h-60 {
     min-height: calc(var(--spacing) * 60);
   }
@@ -604,6 +611,9 @@
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
+  }
+  .max-w-5xl {
+    max-width: var(--container-5xl);
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
@@ -793,6 +803,19 @@
       margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
+  .divide-x {
+    :where(& > :not(:last-child)) {
+      --tw-divide-x-reverse: 0;
+      border-inline-style: var(--tw-border-style);
+      border-inline-start-width: calc(1px * var(--tw-divide-x-reverse));
+      border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+    }
+  }
+  .divide-gray-200 {
+    :where(& > :not(:last-child)) {
+      border-color: var(--color-gray-200);
+    }
+  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -840,6 +863,9 @@
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
+  }
+  .bg-\[url\] {
+    background-color: url;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -940,6 +966,9 @@
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
   }
+  .bg-\[url\(\'\'\)\] {
+    background-image: url('');
+  }
   .bg-\[url\(\'\/background\.svg\'\)\] {
     background-image: url('/background.svg');
   }
@@ -948,6 +977,9 @@
   }
   .bg-\[url\(\'\/images\/Lamido-palace\.jpg\'\)\] {
     background-image: url('/images/Lamido-palace.jpg');
+  }
+  .bg-\[url\(\'\/images\/Lamido-palace\.jpghero\'\)\] {
+    background-image: url('/images/Lamido-palace.jpghero');
   }
   .bg-\[url\(\'\/images\/Menchum-falls\.jpg\'\)\] {
     background-image: url('/images/Menchum-falls.jpg');
@@ -961,11 +993,23 @@
   .bg-\[url\(\'\/images\/face\.png\'\)\] {
     background-image: url('/images/face.png');
   }
+  .bg-\[url\(\'\/images\/hero\'\)\] {
+    background-image: url('/images/hero');
+  }
   .bg-\[url\(\'\/images\/hero\.png\'\)\] {
     background-image: url('/images/hero.png');
   }
   .bg-\[url\(\'\/images\/will-stay\.svg\'\)\] {
     background-image: url('/images/will-stay.svg');
+  }
+  .bg-\[url\(\'her\'\)\] {
+    background-image: url('her');
+  }
+  .bg-\[url\(\'hero\'\)\] {
+    background-image: url('hero');
+  }
+  .bg-\[url\(\)\] {
+    background-image: url();
   }
   .bg-\[url\(background\.svg\)\] {
     background-image: url(background.svg);
@@ -1148,6 +1192,9 @@
   .text-gray-800 {
     color: var(--color-gray-800);
   }
+  .text-green-400 {
+    color: var(--color-green-400);
+  }
   .text-green-800 {
     color: var(--color-green-800);
   }
@@ -1183,6 +1230,11 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .placeholder-gray-400 {
+    &::placeholder {
+      color: var(--color-gray-400);
+    }
   }
   .opacity-0 {
     opacity: 0%;
@@ -1437,6 +1489,12 @@
       outline-width: 0px;
     }
   }
+  .focus\:outline-none {
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+    }
+  }
   .sm\:min-w-\[48\%\] {
     @media (width >= 40rem) {
       min-width: 48%;
@@ -1537,6 +1595,11 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
+  .md\:grid-cols-5 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+  }
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
@@ -1569,6 +1632,11 @@
         margin-inline-start: calc(calc(var(--spacing) * 8) * var(--tw-space-x-reverse));
         margin-inline-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-x-reverse)));
       }
+    }
+  }
+  .md\:p-6 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 6);
     }
   }
   .md\:pl-8 {
@@ -1670,6 +1738,11 @@
   initial-value: 0;
 }
 @property --tw-space-x-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-divide-x-reverse {
   syntax: "*";
   inherits: false;
   initial-value: 0;
@@ -1827,6 +1900,7 @@
       --tw-skew-y: initial;
       --tw-space-y-reverse: 0;
       --tw-space-x-reverse: 0;
+      --tw-divide-x-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
